name:                datalake-server
version:             0.1.0.0
license:             AllRightsReserved
author:              Edsko de Vries
maintainer:          edsko@well-typed.com
copyright:           (c) 2016 Pfizer, Inc
build-type:          Simple
cabal-version:       >=1.10

executable datalake-server
  main-is:             Main.hs
  other-modules:       Pfizer.Datalake.Server
                       Pfizer.Datalake.Server.API
                       Pfizer.Datalake.Server.API.Column
                       Pfizer.Datalake.Server.API.Debug
                       Pfizer.Datalake.Server.API.Group
                       Pfizer.Datalake.Server.API.Groups
                       Pfizer.Datalake.Server.API.Source
                       Pfizer.Datalake.Server.API.Sources
                       Pfizer.Datalake.Server.API.SQL
                       Pfizer.Datalake.Server.API.User
                       Pfizer.Datalake.Server.API.Users
                       Pfizer.Datalake.Server.AppSkeleton
                       Pfizer.Datalake.Server.Auth.BasicAuth
                       Pfizer.Datalake.Server.Auth.LDAP
                       Pfizer.Datalake.Server.Auth.VerifyCreds
                       Pfizer.Datalake.Server.Cmdline
                       Pfizer.Datalake.Server.FriendlyException.Rethrow
                       Pfizer.Datalake.Server.FriendlyException.ReportError
                       Pfizer.Datalake.Server.HandlerM
                       Pfizer.Datalake.Server.Logging
                       Pfizer.Datalake.Server.Serialization
                       Pfizer.Datalake.Server.Servant.Conduit
                       Pfizer.Datalake.Server.Servant.Cookie
                       Pfizer.Datalake.Server.Servant.Handler
                       Pfizer.Datalake.Server.Servant.QueryParamsEither
                       Pfizer.Datalake.Server.Servant.Session
  build-depends:       base
                     , aeson
                     , aws
                     , bytestring
                     , case-insensitive
                     , conduit
                     , connection
                     , containers
                     , cookie
                     , directory
                     , exceptions
                     , filepath
                     , http-api-data
                     , http-client
                     , http-client-tls
                     , http-types
                     , monad-control
                     , mtl
                     , mustache
                     , natural-transformation
                     , network
                     , network-uri
                     , optparse-applicative
                     , parsec
                     , postgresql-simple
                     , pretty
                     , pretty-show
                     , resource-pool
                     , resourcet
                     , servant
                     , servant-server
                     , text
                     , time
                     , tls
                     , transformers
                     , transformers-base
                     , unliftio-core
                     , utf8-string
                     , uuid
                     , vault
                     , wai
                     , wai-conduit
                     , wai-extra
                     , yaml
                     , warp
                     , warp-tls
                     , LDAP
                       -- Use bundled versions
                     , datalake-interface
                     , datalake-backend
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                       DataKinds
                       DefaultSignatures
                       DeriveGeneric
                       FlexibleContexts
                       FlexibleInstances
                       InstanceSigs
                       LambdaCase
                       MultiParamTypeClasses
                       MultiWayIf
                       NamedFieldPuns
                       RankNTypes
                       ScopedTypeVariables
                       StandaloneDeriving
                       TypeFamilies
                       TypeOperators
                       RecordWildCards
                       StandaloneDeriving
  other-extensions:    DeriveAnyClass
                       GeneralizedNewtypeDeriving
                       NoMonoLocalBinds
                       RecursiveDo
  ghc-options:         -Wall -threaded -rtsopts
