name:                lagoon-server
version:             0.1.0.0
license:             AllRightsReserved
author:              Edsko de Vries
maintainer:          edsko@well-typed.com
copyright:           (c) 2016 Pfizer, Inc
build-type:          Simple
cabal-version:       >=1.10

executable lagoon-server
  main-is:             Main.hs
  other-modules:       Lagoon.Server
                       Lagoon.Server.API
                       Lagoon.Server.API.Column
                       Lagoon.Server.API.Debug
                       Lagoon.Server.API.Group
                       Lagoon.Server.API.Groups
                       Lagoon.Server.API.Source
                       Lagoon.Server.API.Sources
                       Lagoon.Server.API.SQL
                       Lagoon.Server.API.User
                       Lagoon.Server.API.Users
                       Lagoon.Server.AppSkeleton
                       Lagoon.Server.Auth.BasicAuth
                       Lagoon.Server.Auth.LDAP
                       Lagoon.Server.Auth.VerifyCreds
                       Lagoon.Server.Cmdline
                       Lagoon.Server.FriendlyException.Rethrow
                       Lagoon.Server.FriendlyException.ReportError
                       Lagoon.Server.HandlerM
                       Lagoon.Server.Logging
                       Lagoon.Server.Serialization
                       Lagoon.Server.Servant.Conduit
                       Lagoon.Server.Servant.Cookie
                       Lagoon.Server.Servant.Handler
                       Lagoon.Server.Servant.QueryParamsEither
                       Lagoon.Server.Servant.Session
  build-depends:       base
                     , aeson
                     , aws
                     , bytestring
                     , case-insensitive
                     , conduit
                     , connection
                     , containers
                     , cookie
                     , directory
                     , exceptions
                     , filepath
                     , http-api-data
                     , http-client
                     , http-client-tls
                     , http-types
                     , monad-control
                     , mtl
                     , mustache
                     , natural-transformation
                     , network
                     , network-uri
                     , optparse-applicative
                     , parsec
                     , postgresql-simple
                     , pretty
                     , pretty-show
                     , resource-pool
                     , resourcet
                     , servant
                     , servant-server
                     , text
                     , time
                     , tls
                     , transformers
                     , transformers-base
                     , unliftio-core
                     , utf8-string
                     , uuid
                     , vault
                     , wai
                     , wai-conduit
                     , wai-extra
                     , yaml
                     , warp
                     , warp-tls
                     , LDAP
                       -- Use bundled versions
                     , lagoon-interface
                     , lagoon-backend
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                       DataKinds
                       DefaultSignatures
                       DeriveGeneric
                       FlexibleContexts
                       FlexibleInstances
                       InstanceSigs
                       LambdaCase
                       MultiParamTypeClasses
                       MultiWayIf
                       NamedFieldPuns
                       RankNTypes
                       ScopedTypeVariables
                       StandaloneDeriving
                       TypeFamilies
                       TypeOperators
                       RecordWildCards
                       StandaloneDeriving
  other-extensions:    DeriveAnyClass
                       GeneralizedNewtypeDeriving
                       NoMonoLocalBinds
                       RecursiveDo
  ghc-options:         -Wall -threaded -rtsopts
