name:                datalake-frontend
version:             0.4.0.0
synopsis:            Client library to the datalake
license:             AllRightsReserved
author:              Edsko de Vries
maintainer:          edsko@well-typed.com
copyright:           (c) 2016 Pfizer, Inc
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Pfizer.Datalake.Client
                       Pfizer.Datalake.Client.AppSkeleton
                       Pfizer.Datalake.Client.FriendlyException.Orphans
                       Pfizer.Datalake.Client.Prog
                       Pfizer.Datalake.Client.Serialization
                       Pfizer.Datalake.Client.Servant.Conduit
                       Pfizer.Datalake.Client.Servant.Cookie
                       Pfizer.Datalake.Client.Servant.QueryParamsEither
                       Pfizer.Datalake.Client.Servant.Session
  build-depends:       base
                     , aeson
                     , bytestring
                     , conduit
                     , conduit-combinators
                     , data-default
                     , directory
                     , exceptions
                     , http-client
                     , http-conduit
                     , http-media
                     , http-types
                     , mtl
                     , optparse-applicative
                     , pretty-show
                     , resourcet
                     , servant
                     , servant-client
                     , text
                     , transformers
                     , yaml
                       -- bundled versions
                     , datalake-interface
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                       DataKinds
                       DefaultSignatures
                       DeriveGeneric
                       FlexibleContexts
                       FlexibleInstances
                       FunctionalDependencies
                       InstanceSigs
                       MultiParamTypeClasses
                       NoMonomorphismRestriction
                       RankNTypes
                       RecordWildCards
                       ScopedTypeVariables
                       TypeFamilies
                       TypeOperators
  other-extensions:    OverloadedStrings
                       UndecidableInstances
  ghc-options:         -Wall
                       -rtsopts
