name:                datalake-interface
version:             0.1.0
license:             AllRightsReserved
author:              Edsko de Vries
maintainer:          edsko@well-typed.com
copyright:           (c) 2016 Pfizer, Inc
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Pfizer.Datalake.Interface
                       Pfizer.Datalake.Interface.API
                       Pfizer.Datalake.Interface.Prog
  other-modules:       Pfizer.Datalake.Interface.Auth
                       Pfizer.Datalake.Interface.ColumnSpec
                       Pfizer.Datalake.Interface.ColumnType
                       Pfizer.Datalake.Interface.DB
                       Pfizer.Datalake.Interface.FriendlyException
                       Pfizer.Datalake.Interface.Ingest
                       Pfizer.Datalake.Interface.JsonPath
                       Pfizer.Datalake.Interface.JsonType
                       Pfizer.Datalake.Interface.Logging
                       Pfizer.Datalake.Interface.Pretty
                       Pfizer.Datalake.Interface.Schema
                       Pfizer.Datalake.Interface.Security
                       Pfizer.Datalake.Interface.Source
                       Pfizer.Datalake.Interface.SourceInfo
                       Pfizer.Datalake.Interface.TsQuery
                       Pfizer.Datalake.Interface.Users
  build-depends:       base
                     , aeson
                     , bytestring
                     , containers
                     , contravariant
                     , data-default
                     , filepath
                     , hashable
                     , http-api-data
                     , parsec
                     , pretty
                     , pretty-show
                     , network-uri
                     , safe
                     , servant
                     , text
                     , time
                     , unordered-containers
                     , utf8-string
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DefaultSignatures
                       DeriveFunctor
                       DeriveGeneric
                       FlexibleInstances
                       GADTs
                       KindSignatures
                       RankNTypes
                       RecordWildCards
                       ScopedTypeVariables
                       TypeOperators
  other-extensions:    DataKinds
                       DeriveAnyClass
                       GeneralizedNewtypeDeriving
                       OverloadedStrings
  ghc-options:         -Wall
