name:                lagoon-interface
version:             0.1.0
license:             AllRightsReserved
author:              Edsko de Vries
maintainer:          edsko@well-typed.com
copyright:           (c) 2016 Pfizer, Inc
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Lagoon.Interface
                       Lagoon.Interface.API
                       Lagoon.Interface.Prog
  other-modules:       Lagoon.Interface.Auth
                       Lagoon.Interface.ColumnSpec
                       Lagoon.Interface.ColumnType
                       Lagoon.Interface.DB
                       Lagoon.Interface.FriendlyException
                       Lagoon.Interface.Ingest
                       Lagoon.Interface.JsonPath
                       Lagoon.Interface.JsonType
                       Lagoon.Interface.Logging
                       Lagoon.Interface.Pretty
                       Lagoon.Interface.Schema
                       Lagoon.Interface.Security
                       Lagoon.Interface.Source
                       Lagoon.Interface.SourceInfo
                       Lagoon.Interface.TsQuery
                       Lagoon.Interface.Users
  build-depends:       base
                     , aeson
                     , bytestring
                     , containers
                     , contravariant
                     , data-default
                     , filepath
                     , hashable
                     , http-api-data
                     , parsec
                     , pretty
                     , pretty-show
                     , network-uri
                     , safe
                     , servant
                     , text
                     , time
                     , unordered-containers
                     , utf8-string
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DefaultSignatures
                       DeriveFunctor
                       DeriveGeneric
                       FlexibleInstances
                       GADTs
                       KindSignatures
                       RankNTypes
                       RecordWildCards
                       ScopedTypeVariables
                       TypeOperators
  other-extensions:    DataKinds
                       DeriveAnyClass
                       GeneralizedNewtypeDeriving
                       OverloadedStrings
  ghc-options:         -Wall
